# PyChess

./: .dockerignore  .gitignore  .markdownlint.json  AGENTS.md  Agents.md  Claude.md  Dockerfile  Dockerfile.tests  MILESTONES.md  Milestones.md  PR.md  README.md  WEB-UI_PHASES.md  alembic.ini  docker-compose.e2e.yml  docker-compose.yml  pyproject.toml
docs/: NETWORK_MULTIPLAYER_DESIGN.md
migrations/: env.py
migrations/versions/: 01f89eec96ce_initial_matches_table.py
src/pychess/: __init__.py  __main__.py  cli.py  main.py
src/pychess/ai/: __init__.py  engine.py  evaluation.py  hard.py
src/pychess/controller/: __init__.py  game_controller.py  game_session.py
src/pychess/match/: __init__.py  errors.py  invite_code.py  migrations.py  models.py  orm.py  (+4 more)
tests/: __init__.py  conftest.py  test_cli.py  test_cli_show_game.py  test_main.py
tests/ai/: test_engine.py  test_hard.py
tests/controller/: __init__.py  test_game_controller.py  test_game_session.py  test_promotion_dialog.py
tests/e2e/: conftest.py  test_two_player_match.py
tests/integration/: __init__.py  test_ai_games.py  test_full_game.py  test_save_load_cycle.py
tests/match/: conftest.py  test_match_repository.py  test_match_service.py  test_migrations.py
tests/model/: test_board.py  test_game_state.py  test_piece.py  test_square.py
tests/notation/: __init__.py  test_pgn.py  test_san.py
tests/persistence/: __init__.py  test_save_manager.py
tests/rules/: __init__.py  test_game_logic.py  test_move.py  test_move_generator.py  test_validator.py
tests/ui/: test_cursor.py  test_game_mode.py  test_help_overlay.py  test_input_handler.py  test_mouse.py  test_terminal.py
tests/web/: __init__.py  test_app.py  test_game_manager.py  test_match_routes.py  test_match_socketio.py  test_routes.py  test_serializers.py
(+45 files in other folders)
