[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pychess"
version = "1.0.0"
description = "Terminal-based ASCII Chess game (with Web UI as well)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "PyChess Team"}
]
dependencies = [
    "blessed>=1.20.0",
    "flask>=3.0.0",
    "flask-socketio>=5.3",
    "simple-websocket>=1.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
server = [
    "gunicorn>=21.2",
    "gevent>=24.0",
    "gevent-websocket>=0.10.1",
]

[project.scripts]
pychess = "pychess.main:main"
pychess-web = "pychess.web.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"pychess.web" = [
    "templates/**/*.html",
    "static/**/*"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
